# LucidPlay

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: SPEC.md
scripts/: capture.py  serve.py  train.py
src/: capture.py  config.py  dataset.py  device.py  game_server.py  infer.py  model.py  scene.py  train.py
src/viewer/: index.html
tests/: conftest.py  test_capture.py  test_dataset.py  test_device.py  test_infer.py  test_model.py  test_physics.py  test_scene.py
